# TimeAura

./: .gitignore  index.html
.github/workflows/: desktop-ci.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: export-b2-icons.sh  run-vitest-sequential.mjs
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: TimeAura-Channel-Config-PRD-and-Interaction-Spec.md  TimeAura-Database-Schema-Draft.md  TimeAura-Delivery-Checklist.md  TimeAura-Design-Language-and-UI-Conventions.md  TimeAura-Desktop-Acceptance-Checklist.md  TimeAura-Desktop-Icon-Export-Spec.md  TimeAura-Development-Backlog.md  TimeAura-Frontend-Breakdown.md  TimeAura-Frontend-Structure.md  TimeAura-LowFi-Wireframes-v1.md  TimeAura-Next-Phase-Backlog.md  TimeAura-PRD-v1.md  TimeAura-Service-Interface-Draft.md  TimeAura-Tauri-React-Scaffold-Plan.md  TimeAura-Tech-Selection.md  TimeAura-UI-Model-Final-Prompt.md  TimeAura-Workspace-Hook-Test-Plan.md  TimeAura-Workspace-Hook-Test-Scaffold.md
docs/logo-options/: README.md  index.html
docs/logo-options/b2-suite/: README.md  index.html  timeaura-b2-animation-demo.html
drafts/: README.md
drafts/db/migrations/: 0001_init_core.sql  0002_seed_defaults.sql
drafts/src/: index.ts
drafts/src/bootstrap/: appContainer.ts  createAppServices.ts  createMockAppServices.ts  createSqliteAppServices.ts  index.ts
(+150 files in other folders)
