[package]
name = "timeaura-desktop"
version = "0.1.0"
description = "TimeAura Desktop"
authors = ["TimeAura"]
edition = "2021"

[lib]
name = "timeaura_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["test"] }
tauri-plugin-notification = "2.0.0"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-stronghold = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.12"
